--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
     <!-- HERO -->
     <section class="hero">
-      <h1>RobotMotion</h1>
-      <p class="subtitle">
-        A large-scale human behavior dataset for training physical AI and humanoid robots.
-      </p>
+  <div class="hero-content">
+    <h1>RobotMotion</h1>
+    <p class="subtitle">A large-scale human behavior dataset for training physical AI and humanoid robots.</p>
 
-      <div class="links">
-        <a href="#" target="_blank">Paper</a>
-        <a href="#" target="_blank">Dataset</a>
-        <a href="#" target="_blank">Code</a>
-      </div>
-    </section>
+    <div class="links">
+      <a class="btn" href="#">Paper</a>
+      <a class="btn" href="#">Dataset</a>
+      <a class="btn" href="#">Code</a>
+    </div>
+  </div>
+</section>
 
     <!-- ABOUT -->
     <section>
