Add license section to index.html
Added a section for license information to the HTML document.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
   year={2025}
 }
       </pre>
+      <section>
+  <h2>License</h2>
+  <p>
+    This dataset is licensed under <strong>CC BY-SA 4.0</strong>  
+    (or your own license here if different).
+  </p>
+</section>
+
     </section>
 
     <!-- FOOTER -->
