--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
         and behavior imitation.
       </p>
     </section>
+<!-- Dataset overview -->
+    <section>
+  <h2>Dataset Overview</h2>
+  <p>
+    RobotMotion is a large-scale dataset of real-world human behavior collected
+    through egocentric video, audio, and task-oriented recordings.
+  </p>
+
+  <ul>
+    <li><strong>Modalities:</strong> RGB video, audio, task metadata</li>
+    <li><strong>Viewpoint:</strong> Egocentric (first-person)</li>
+    <li><strong>Environments:</strong> Indoor & real-world daily settings</li>
+    <li><strong>Granularity:</strong> Long-horizon action sequences</li>
+  </ul>
+</section>
+
 
     <!-- DATASET -->
     <section>
