Add Scale & Statistics and Data Access sections
Added a new section for Scale & Statistics and Data Access.

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
   </ul>
 </section>
 
+    <!-- Scale & Statistics -->
+    <section>
+  <h2>Scale & Statistics</h2>
+  <ul>
+    <li>Total recordings: <em>to be released</em></li>
+    <li>Total hours: <em>to be released</em></li>
+    <li>Number of tasks: <em>to be released</em></li>
+    <li>Number of environments: <em>to be released</em></li>
+  </ul>
+</section>
+
 
     <!-- DATASET -->
     <section>
@@ -69,6 +80,29 @@
         long-horizon task execution.
       </p>
     </section>
+
+        <!-- Data Access -->
+    <section>
+  <h2>Data Access</h2>
+  <p>
+    The RobotMotion dataset will be released in phases.
+  </p>
+
+  <ul>
+    <li><strong>Phase 1:</strong> Public subset for research and benchmarking</li>
+    <li><strong>Phase 2:</strong> Extended dataset under research agreement</li>
+    <li><strong>Phase 3:</strong> Commercial access for enterprise use</li>
+  </ul>
+</section>
+    
+    <!-- Intended Use -->
+<section>
+  <h2>Intended Use</h2>
+  <p>
+    RobotMotion is designed for research in robot learning, imitation learning,
+    and physical AI. It is not intended for surveillance or biometric identification.
+  </p>
+</section>
 
     <!-- CITATION -->
     <section>
