--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     </div>
   </div>
 </section>
+    
+<video autoplay loop muted playsinline>
+  <source src="assets/videos/IMRcobot.mp4" type="video/mp4">
+</video>
 
     <!-- ABOUT -->
     <section>
