--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
     </div>
   </div>
 </section>
-    
-<video autoplay loop muted playsinline>
-  <source src="assets/videos/IMRcobot.mp4" type="video/mp4">
-</video>
 
     <!-- ABOUT -->
     <section>
@@ -39,6 +35,24 @@
     </section>
 <!-- Dataset overview -->
     <section>
+      <section>
+  <h2>Dataset Examples</h2>
+
+  <div class="video-grid">
+    <video autoplay loop muted playsinline>
+      <source src="assets/videos/egocentric_1.mp4" type="video/mp4">
+    </video>
+
+    <video autoplay loop muted playsinline>
+      <source src="assets/videos/egocentric_2.mp4" type="video/mp4">
+    </video>
+
+    <video autoplay loop muted playsinline>
+      <source src="assets/videos/egocentric_3.mp4" type="video/mp4">
+    </video>
+  </div>
+</section>
+
   <h2>Dataset Overview</h2>
   <p>
     RobotMotion is a large-scale dataset of real-world human behavior collected
