--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div class="video-grid">
     <video autoplay loop muted playsinline>
-      <source src="assets/videos/IMRcobot.mp4" type="video/mp4">
+      <source src="assets/videos/Imr Cobot.mp4" type="video/mp4">
     </video>
   </div>
 </section>
