--- a/index.html
+++ b/index.html
@@ -38,11 +38,24 @@
       <section>
   <h2>Dataset Examples</h2>
 
-  <div class="video-grid">
+  <section class="single-demo">
+
+  <p class="task-title">
+    <em>Task.</em> Pick and drop an object.
+  </p>
+
+  <div class="demo-video">
     <video autoplay loop muted playsinline>
-      <source src="assets/videos/Imr Cobot.mp4" type="video/mp4">
+      <source src="assets/videos/Imr cobot_web.mp4" type="video/mp4">
     </video>
   </div>
+
+  <p class="demo-caption">
+    Robot Hand demonstration
+  </p>
+
+</section>
+
 </section>
 
   <h2>Dataset Overview</h2>
