--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <div class="demo-video">
     <video autoplay loop muted playsinline>
-      <source src="assets/videos/Imr cobot.mp4" type="video/mp4">
+      <source src="assets/videos/Imr Cobot.mp4" type="video/mp4">
     </video>
   </div>
 
