--- a/index.html
+++ b/index.html
@@ -38,23 +38,38 @@
       <section>
   <h2>Dataset Examples</h2>
 
-  <section class="single-demo">
+  <section class="paired-demo">
 
   <p class="task-title">
     <em>Task.</em> Pick and drop an object.
   </p>
 
-  <div class="demo-video">
-    <video autoplay loop muted playsinline>
-      <source src="assets/videos/Imr Cobot.mp4" type="video/mp4">
-    </video>
+  <div class="paired-videos">
+
+    <!-- Left video -->
+    <div class="demo-video">
+      <video autoplay loop muted playsinline>
+        <source src="assets/videos/IMRcobot_web.mp4" type="video/mp4">
+      </video>
+      <p class="demo-caption">Robot hand demonstration</p>
+    </div>
+
+    <!-- Right video (new one) -->
+    <div class="demo-video">
+      <video autoplay loop muted playsinline>
+        <source src="assets/videos/Vulcan X Vinrobotics Mp4.mp4" type="video/mp4">
+      </video>
+      <p class="demo-caption">And multiple other tasks</p>
+    </div>
+
   </div>
 
-  <p class="demo-caption">
-    Robot Hand demonstration
-  </p>
-
 </section>
+
+
+  
+</section>
+
 
 </section>
 
