--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Left video -->
     <div class="demo-video">
       <video autoplay loop muted playsinline>
-        <source src="assets/videos/Imr Cobot_web.mp4" type="video/mp4">
+        <source src="assets/videos/Imr Cobot.mp4" type="video/mp4">
       </video>
       <p class="demo-caption">Robot hand demonstration</p>
     </div>
