--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <section class="paired-demo">
 
   <p class="task-title">
-    <em>Task.</em> Pick and drop an object.
+    <em>Trained robot hands doing multiple task.</em>
   </p>
 
   <div class="paired-videos">
@@ -51,7 +51,7 @@
       <video autoplay loop muted playsinline>
         <source src="assets/videos/Imr Cobot.mp4" type="video/mp4">
       </video>
-      <p class="demo-caption">Robot hand demonstration</p>
+      <p class="demo-caption">Pick and place an object</p>
     </div>
 
     <!-- Right video (new one) -->
