--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
 </section>
 
     <!-- ABOUT -->
-    <section>
-      <h2>About</h2>
-      <p>
-        RobotMotion is a data collection platform and dataset focused on capturing
-        real-world human actions, audio, and interactions to enable robot learning
-        and behavior imitation.
-      </p>
-    </section>
+    <section class="abstract">
+  <h2>Abstract</h2>
+  <p>
+    RobotMotion is a large-scale dataset of real-world human behavior designed to
+    support research in robot learning and physical AI. The dataset captures
+    egocentric human demonstrations across diverse tasks, environments, and
+    object configurations, with a focus on long-horizon, multi-step activities.
+    RobotMotion aims to bridge the gap between human behavior data and embodied
+    robotic systems.
+  </p>
+</section>
+
 <!-- Dataset overview -->
     <section>
       <section>
