--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </section>
 
     <!-- ABOUT -->
-    <section class="abstract">
+    <section class="minititle">
   <h2>Abstract</h2>
   <p>
     RobotMotion is a large-scale dataset of real-world human behavior designed to
@@ -39,8 +39,8 @@
 
 <!-- Dataset overview -->
     <section>
-      <section>
-  <h2>Dataset Examples</h2>
+      <section class="minititle">
+  <h2>Dataset Examples </h2>
 
   <section class="paired-demo">
 
@@ -92,7 +92,7 @@
 </section>
 
     <!-- Scale & Statistics -->
-    <section>
+    <section class="minititle">
   <h2>Scale & Statistics</h2>
   <ul>
     <li>Total recordings: <em>to be released</em></li>
@@ -104,7 +104,7 @@
 
 
     <!-- DATASET -->
-    <section>
+    <section class="minititle">
       <h2>Dataset</h2>
       <ul>
         <li>Egocentric human video</li>
@@ -115,7 +115,7 @@
     </section>
 
     <!-- TASKS -->
-    <section>
+    <section class="minititle">
       <h2>Supported Tasks</h2>
       <p>
         Manipulation, navigation, daily activities, tool usage, and
@@ -124,7 +124,7 @@
     </section>
 
         <!-- Data Access -->
-    <section>
+    <section class="minititle">
   <h2>Data Access</h2>
   <p>
     The RobotMotion dataset will be released in phases.
@@ -138,7 +138,7 @@
 </section>
     
     <!-- Intended Use -->
-<section>
+<section class="minititle">
   <h2>Intended Use</h2>
   <p>
     RobotMotion is designed for research in robot learning, imitation learning,
@@ -147,7 +147,7 @@
 </section>
 
     <!-- CITATION -->
-    <section>
+    <section class="minititle">
       <h2>Citation</h2>
       <pre>
 @misc{robotmotion2025,
@@ -156,7 +156,7 @@
   year={2025}
 }
       </pre>
-      <section>
+      <section class="minititle">
   <h2>License</h2>
   <p>
     This dataset is licensed under <strong>CC BY-SA 4.0</strong>  
