--- a/index.html
+++ b/index.html
@@ -77,19 +77,40 @@
 
 </section>
 
+  <section>
   <h2>Dataset Overview</h2>
+
   <p>
-    RobotMotion is a large-scale dataset of real-world human behavior collected
-    through egocentric video, audio, and task-oriented recordings.
+    RobotMotion is a large-scale dataset of real-world human behavior designed
+    for research in robot learning and physical AI. The dataset captures
+    egocentric demonstrations of task-oriented activities performed in
+    everyday environments, with an emphasis on long-horizon, multi-step actions.
   </p>
 
-  <ul>
-    <li><strong>Modalities:</strong> RGB video, audio, task metadata</li>
-    <li><strong>Viewpoint:</strong> Egocentric (first-person)</li>
-    <li><strong>Environments:</strong> Indoor & real-world daily settings</li>
-    <li><strong>Granularity:</strong> Long-horizon action sequences</li>
+  <ul class="dataset-spec">
+    <li>
+      <strong>Modalities:</strong>
+      RGB video, optional audio, task-level metadata
+    </li>
+    <li>
+      <strong>Viewpoint:</strong>
+      Egocentric (first-person), aligned with human perception
+    </li>
+    <li>
+      <strong>Environments:</strong>
+      Indoor and real-world daily settings with diverse object configurations
+    </li>
+    <li>
+      <strong>Temporal Structure:</strong>
+      Continuous sequences capturing full task execution
+    </li>
+    <li>
+      <strong>Granularity:</strong>
+      Long-horizon action sequences rather than isolated primitives
+    </li>
   </ul>
 </section>
+
 
     <!-- Scale & Statistics -->
     <section>
