--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
       Long-horizon action sequences rather than isolated primitives
     </li>
   </ul>
+
+    <img
+    src="assets/image/RM AI Infrastructure.PNG"
+    alt="Overview of RobotMotion dataset structure"
+    class="overview-diagram"
+  />
 </section>
 
 
