--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
     alt="Overview of RobotMotion dataset structure"
     class="overview-diagram"
   />
+    <p class="diagram-caption">
+    Overview of the RobotMotion data pipeline, illustrating the flow
+    between Human videos, Simulation Data, and TeleOps.
+  </p>
 </section>
 
 
