--- a/index.html
+++ b/index.html
@@ -125,13 +125,35 @@
     <!-- Scale & Statistics -->
     <section>
   <h2>Scale & Statistics</h2>
-  <ul>
-    <li>Total recordings: <em>to be released</em></li>
-    <li>Total hours: <em>to be released</em></li>
-    <li>Number of tasks: <em>to be released</em></li>
-    <li>Number of environments: <em>to be released</em></li>
+
+  <ul class="dataset-spec">
+    <li>
+      <strong>Total recordings:</strong>
+      Large-scale (exact count to be released)
+    </li>
+    <li>
+      <strong>Total duration:</strong>
+      Hundreds of hours (estimated)
+    </li>
+    <li>
+      <strong>Number of tasks:</strong>
+      Dozens of distinct task categories
+    </li>
+    <li>
+      <strong>Number of environments:</strong>
+      Multiple real-world indoor settings
+    </li>
+    <li>
+      <strong>Sequence length:</strong>
+      Long-horizon, multi-step task executions
+    </li>
   </ul>
+
+  <p>
+    Statistics will be finalized and published as data collection progresses.
+  </p>
 </section>
+
 
 
     <!-- DATASET -->
