--- a/index.html
+++ b/index.html
@@ -129,30 +129,32 @@
   <ul class="dataset-spec">
     <li>
       <strong>Total recordings:</strong>
-      Large-scale (exact count to be released)
+      Tens of thousands of task episodes (ongoing collection)
     </li>
     <li>
       <strong>Total duration:</strong>
-      Hundreds of hours (estimated)
+      100+ hours of egocentric human demonstrations
     </li>
     <li>
       <strong>Number of tasks:</strong>
-      Dozens of distinct task categories
+      20+ task categories spanning manipulation and daily activities
     </li>
     <li>
       <strong>Number of environments:</strong>
-      Multiple real-world indoor settings
+      Multiple real-world indoor environments
     </li>
     <li>
-      <strong>Sequence length:</strong>
-      Long-horizon, multi-step task executions
+      <strong>Temporal structure:</strong>
+      Continuous, long-horizon task execution
     </li>
   </ul>
 
   <p>
-    Statistics will be finalized and published as data collection progresses.
+    The dataset will continue to expand over time as new tasks
+    and environments are added.
   </p>
 </section>
+
 
 
 
