--- a/index.html
+++ b/index.html
@@ -183,6 +183,33 @@
   </table>
 </section>
 
+    <section class="samples">
+  <h2>Samples</h2>
+
+  <p class="samples-desc">
+    The following videos show representative samples from the RobotMotion dataset,
+    illustrating demonstrations across different tasks and small tools manipulation.
+  </p>
+
+  <div class="samples-grid">
+
+    <div class="sample-item">
+      <video autoplay loop muted playsinline>
+        <source src="assets/videos/Small object manipulation.mp4" type="video/mp4">
+      </video>
+      <p class="sample-caption">Wielding small chip</p>
+    </div>
+
+    <div class="sample-item">
+      <video autoplay loop muted playsinline>
+        <source src="assets/videos/Tools manipulation.mp4" type="video/mp4">
+      </video>
+      <p class="sample-caption">Tools manipulation</p>
+    </div>
+
+  </div>
+</section>
+
 
     <!-- Scale & Statistics -->
     <section>
