--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
     <div class="sample-item">
       <video autoplay loop muted playsinline>
-        <source src="assets/videos/Tools manipulation.mp4" type="video/mp4">
+        <source src="assets/videos/Tool manipulation.mp4" type="video/mp4">
       </video>
       <p class="sample-caption">Tools manipulation</p>
     </div>
