--- a/index.html
+++ b/index.html
@@ -183,6 +183,40 @@
   </table>
 </section>
 
+    <section class="digital-twins">
+  <h2>Digital Twins</h2>
+
+  <p>
+    RobotMotion enables the construction of simulation-aligned digital twins
+    derived from real-world human demonstrations. These digital twins represent
+    task execution as structured, temporally coherent sequences that can be
+    replayed, analyzed, or used for learning in simulated environments.
+  </p>
+
+  <p>
+    Rather than aiming for exact physical replication, RobotMotion focuses on
+    capturing task-relevant structure, object interactions, and temporal context
+    that are transferable from real-world demonstrations to simulation.
+  </p>
+
+  <!-- GIF goes here -->
+  <div class="twin-visual">
+    <img
+      src="assets/gifs/Animation.gif"
+      alt="Digital twins of turning process"
+    />
+    <p class="twin-caption">
+      Example digital twin reconstructed from a real-world human demonstration.
+    </p>
+  </div>
+
+  <p class="note">
+    Digital twins in RobotMotion are designed to capture task-relevant structure
+    rather than exact physical or geometric replication, and may vary in fidelity
+    depending on the task and environment.
+  </p>
+</section>
+
     <section class="samples">
   <h2>Samples</h2>
 
