--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
   <!-- GIF goes here -->
   <div class="twin-visual">
     <img
-      src="assets/gifs/Animation.gif"
+      src="assets/videos/digital_twins1.mp4"
       alt="Digital twins of turning process"
     />
     <p class="twin-caption">
-      Example digital twin reconstructed from a real-world human demonstration.
+      Example digital twin reconstructed from a robot arm.
     </p>
   </div>
 
