--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
     <p class="subtitle">A large-scale human behavior dataset for training physical AI and humanoid robots.</p>
 
     <div class="links">
-      <a class="btn" href="#">Paper</a>
+      <a href="assets/paper/RobotMotion A Multi-Source Humanoid Behavior Dataset for Physical AI (1).pdf"
+   target="_blank"
+   class="button">
+  Paper
+</a>
+
       <a class="btn" href="#">Dataset</a>
       <a class="btn" href="#">Code</a>
     </div>
