--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p class="subtitle">A large-scale human behavior dataset for training physical AI and humanoid robots.</p>
 
     <div class="links">
-      <a href="assets/paper/RobotMotion A Multi-Source Humanoid Behavior Dataset for Physical AI (1).pdf"
+      <a href="https://drive.google.com/file/d/1X11gjIQFWZTJ8rESoPLEWf8hzI-FwM7z/view?usp=sharing"
    target="_blank"
    class="button">
   Paper
