--- a/index.html
+++ b/index.html
@@ -17,14 +17,23 @@
     <p class="subtitle">A large-scale human behavior dataset for training physical AI and humanoid robots.</p>
 
     <div class="links">
-      <a href="https://drive.google.com/file/d/1X11gjIQFWZTJ8rESoPLEWf8hzI-FwM7z/view?usp=sharing"
+    <a href="https://drive.google.com/file/d/1X11gjIQFWZTJ8rESoPLEWf8hzI-FwM7z/view?usp=sharing"
    target="_blank"
    class="button">
   Paper
 </a>
 
-      <a class="btn" href="#">Dataset</a>
-      <a class="btn" href="#">Code</a>
+      <div class="links">
+    <a href="https://drive.google.com/file/d/1SGuQxCZZ-zgUALXhXhfcWfVtf8GkS6of/view?usp=sharing"
+   target="_blank"
+   class="button">
+  Dataset
+</a>
+      <a href="https://drive.google.com/file/d/12MPpdxoN9DIZZ_JtEwjZCzHr8MA-btSi/view?usp=sharing"
+   target="_blank"
+   class="button">
+  Roadmap
+</a>
     </div>
   </div>
 </section>
@@ -39,6 +48,18 @@
     object configurations, with a focus on long-horizon, multi-step activities.
     RobotMotion aims to bridge the gap between human behavior data and embodied
     robotic systems.
+  </p>
+</section>
+
+    <!-- Project objectives -->
+    <section id="objectives">
+  <h2>Project Objectives</h2>
+  <p>
+    RobotMotion aims to build a large-scale, high-quality, multi-modal humanoid dataset and
+    an associated AI development pipeline to accelerate research and real-world deployment
+    of humanoid robots across perception, reasoning, and action. The project focuses on
+    enabling learning for vision-language-action models, manipulation, locomotion, and
+    embodied decision-making in diverse real-world environments.
   </p>
 </section>
 
@@ -126,7 +147,17 @@
     between Human videos, Simulation Data, and TeleOps.
   </p>
 </section>
-    
+
+    <!-- Data Sources -->
+    <section id="data-sources">
+  <h2>Data Sources</h2>
+  <ul>
+    <li><strong>Human Data:</strong> Egocentric and third-person human demonstrations collected in natural, unconstrained environments.</li>
+    <li><strong>Simulation Data:</strong> Large-scale data generated in physics-based simulators with rich state information and ground-truth annotations.</li>
+    <li><strong>Teleoperation Data:</strong> Real humanoid robot executions captured via human-in-the-loop control.</li>
+  </ul>
+</section>
+
 <!-- Data modalities -->
   <section>
   <h2>Data Modalities</h2>
