--- a/index.html
+++ b/index.html
@@ -17,24 +17,30 @@
     <p class="subtitle">A large-scale human behavior dataset for training physical AI and humanoid robots.</p>
 
     <div class="links">
-    <a href="https://drive.google.com/file/d/1X11gjIQFWZTJ8rESoPLEWf8hzI-FwM7z/view?usp=sharing"
-   target="_blank"
-   class="button">
-  Paper
-</a>
+  <a
+    href="https://drive.google.com/file/d/1X11gIjQFWZTJ8rESoPLEWF8hzI-FwM7z/view?usp=sharing"
+    target="_blank"
+    class="button"
+  >
+    Paper
+  </a>
 
-      <div class="links">
-    <a href="https://drive.google.com/file/d/1SGuQxCZZ-zgUALXhXhfcWfVtf8GkS6of/view?usp=sharing"
-   target="_blank"
-   class="button">
-  Dataset
-</a>
-      <a href="https://drive.google.com/file/d/12MPpdxoN9DIZZ_JtEwjZCzHr8MA-btSi/view?usp=sharing"
-   target="_blank"
-   class="button">
-  Roadmap
-</a>
-    </div>
+  <a
+    href="https://drive.google.com/file/d/1SGuQxCZZ-zgUALXhXhFwfVTf8GkS6oF/view?usp=sharing"
+    target="_blank"
+    class="button"
+  >
+    Dataset
+  </a>
+
+  <a
+    href="https://drive.google.com/file/d/12MPpdxoN9DIZZ_JtEwjZCzHr8MA-btSi/view?usp=sharing"
+    target="_blank"
+    class="button"
+  >
+    Roadmap
+  </a>
+</div>
   </div>
 </section>
 
