--- a/index.html
+++ b/index.html
@@ -69,6 +69,50 @@
   </p>
 </section>
 
+
+        <!-- Project status -->
+    <section class="status">
+  <h2>Project Status</h2>
+
+  <p class="status-note">
+    RobotMotion is an ongoing dataset and system development effort.
+    The metrics below reflect the current internal progress and will
+    be updated as the project evolves.
+  </p>
+
+  <div class="status-grid">
+    <div class="status-item">
+      <span class="status-value">~XX</span>
+      <span class="status-label">Skills defined</span>
+    </div>
+
+    <div class="status-item">
+      <span class="status-value">~XXX</span>
+      <span class="status-label">Recorded episodes</span>
+    </div>
+
+    <div class="status-item">
+      <span class="status-value">~XX hrs</span>
+      <span class="status-label">Multi-modal data</span>
+    </div>
+
+    <div class="status-item">
+      <span class="status-value">3</span>
+      <span class="status-label">Data sources</span>
+    </div>
+
+    <div class="status-item">
+      <span class="status-value">RGB / RGB-D</span>
+      <span class="status-label">Vision modalities</span>
+    </div>
+
+    <div class="status-item">
+      <span class="status-value">Human / Sim / TeleOp</span>
+      <span class="status-label">Collection modes</span>
+    </div>
+  </div>
+</section>
+
 <!-- Dataset overview -->
     <section>
       <section>
