--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
   >
     Dataset
   </a>
-
+  <a
+    href="https://drive.google.com/file/d/1nThpJsG2QF7CbkWY1zUlkWKuPV2PG3_5/view?usp=sharing"
+    target="_blank"
+    class="button"
+  >
+    Timeline
+  </a>
   <a
     href="https://drive.google.com/file/d/12MPpdxoN9DIZZ_JtEwjZCzHr8MA-btSi/view?usp=sharing"
     target="_blank"
@@ -82,17 +88,17 @@
 
   <div class="status-grid">
     <div class="status-item">
-      <span class="status-value">~XX</span>
+      <span class="status-value">12</span>
       <span class="status-label">Skills defined</span>
     </div>
 
     <div class="status-item">
-      <span class="status-value">~XXX</span>
+      <span class="status-value">140</span>
       <span class="status-label">Recorded episodes</span>
     </div>
 
     <div class="status-item">
-      <span class="status-value">~XX hrs</span>
+      <span class="status-value">~3.5 hrs</span>
       <span class="status-label">Multi-modal data</span>
     </div>
 
