--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
   <p class="footnote">
     Full dataset schemas and detailed JSON specifications are available in the
-    <a href="docs/data_format.md">documentation</a>.
+    <a href="docs/data_format.pdf">documentation</a>.
   </p>
 </section>
 
