--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
   <p class="footnote">
     Full dataset schemas and detailed JSON specifications are available in the
-    <a href="docs/data_format.pdf">documentation</a>.
+    <a href="https://drive.google.com/file/d/1z3UDhNpSor1R9BGQtfAlzT93O1zwi0rd/view?usp=drive_link">documentation</a>.
   </p>
 </section>
 
