--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<!DOCTYPE html>
+<body>
+  <div class="page-bg">
+    <div class="container">
+      
+      <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -544,3 +548,6 @@
   </div>
 </body>
 </html>
+</div>
+  </div>
+</body>
