--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- ABOUT -->
     <section class="minititle">
   <h2>Abstract</h2>
-  <p>
+  <p class="section-description">
     RobotMotion is a large-scale dataset of real-world human behavior designed to
     support research in robot learning and physical AI. The dataset captures
     egocentric human demonstrations across diverse tasks, environments, and
@@ -84,7 +84,7 @@
     <section class="status">
   <h2>Project Status</h2>
 
-  <p class="status-note">
+  <p class="section-description">
     RobotMotion is an ongoing dataset and system development effort.
     The metrics below reflect the current internal progress and will
     be updated as the project evolves.
