--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   "skill_id": 1,
   "skill_name": "pick_up_cup",
   "skill_description": "Pick up a cup from a table or flat surface using one hand",
-  "total_episodes": 45,
+  "total_episodes": 2750,
   "episodes": [
     {
       "episode_id": 1,
@@ -383,7 +383,7 @@
   "skill_id": 1,
   "skill_name": "pick_up_cup",
   "skill_description": "Grasp and lift a cup or similar object from a table using one or both hands while maintaining whole-body balance.",
-  "total_episodes": 150,
+  "total_episodes": 475,
   "robot_config": {
     "robot_uid": "unitree_g1_v2025",
     "robot_type": "g1 from unitree",
@@ -608,7 +608,7 @@
     </li>
     <li>
       <strong>Number of environments:</strong>
-      Multiple real-world indoor environments
+      1000 Evnironments: homes, labs, schools and factories.
     </li>
     <li>
       <strong>Temporal structure:</strong>
@@ -631,21 +631,11 @@
   </p>
 </section>
 
-    <!-- CITATION -->
-    <section>
-      <h2>Citation</h2>
-      <pre>
-@misc{robotmotion2025,
-  title={RobotMotion: A Human Behavior Dataset for Physical AI},
-  author={RobotMotion Team},
-  year={2025}
-}
-      </pre>
-      <section>
   <h2>License</h2>
   <p>
-    This dataset is licensed under <strong>CC BY-SA 4.0</strong>  
-    (or your own license here if different).
+    This dataset is proprietary to RobotMotion, Inc. and is not publicly licensed.
+No rights are granted for redistribution, sublicensing, or reuse without prior written consent
+
   </p>
 </section>
 
@@ -654,7 +644,7 @@
     <!-- FOOTER -->
     <footer>
       <p>
-        Contact: <a href="mailto:contact@robotmotion.ai">contact@robotmotion.ai</a>
+        Contact: <a href="mailto:chris@robotmotion.ai">Chris@robotmotion.ai</a>
       </p>
     </footer>
 
