--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
     
 <!-- Dataset Structure & Modalities -->
 <section id="dataset-structure" class="section">
+  <div class="container">
   <h2>Dataset Structure & Modalities</h2>
   <p class="section-subtitle">
     RobotMotion organizes heterogeneous data sources under a unified skill–episode abstraction,
@@ -448,7 +449,7 @@
     </div>
 
   </div>
-
+  </div>
   <p class="footnote">
     Full dataset schemas and detailed JSON specifications are available in the
     <a href="https://drive.google.com/file/d/1z3UDhNpSor1R9BGQtfAlzT93O1zwi0rd/view?usp=drive_link">documentation</a>.
