--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@
 
     <!-- Human Data -->
     <div class="dataset-column">
+      <div class="column-media">
+  <video
+    src="videos/humandemonstration.mp4"
+    autoplay
+    muted
+    loop
+    playsinline
+  ></video>
+</div>
       <h3>Human Demonstrations</h3>
       <ul>
         <li>Egocentric RGB / RGB-D video</li>
@@ -252,6 +261,15 @@
 
     <!-- Simulation Data -->
     <div class="dataset-column">
+      <div class="column-media">
+  <video
+    src="videos/simulationdata.mp4"
+    autoplay
+    muted
+    loop
+    playsinline
+  ></video>
+</div>
       <h3>Simulation Data</h3>
       <ul>
         <li>Large-scale skill generation in NVIDIA Isaac Sim</li>
@@ -334,6 +352,15 @@
 
     <!-- Teleoperation Data -->
     <div class="dataset-column">
+      <div class="column-media">
+  <video
+    src="videos/teleops.mp4"
+    autoplay
+    muted
+    loop
+    playsinline
+  ></video>
+</div>
       <h3>Teleoperated Robot Data</h3>
       <ul>
         <li>Real humanoid robot execution</li>
