--- a/index.html
+++ b/index.html
@@ -200,13 +200,9 @@
     <!-- Human Data -->
     <div class="dataset-column">
       <div class="column-media">
-  <video
-    src="videos/humandemonstration.mp4"
-    autoplay
-    muted
-    loop
-    playsinline
-  ></video>
+  <video autoplay muted loop playsinline>
+    <source src="assets/videos/humandemonstration.mp4" type="video/mp4">
+  </video>
 </div>
       <h3>Human Demonstrations</h3>
       <ul>
@@ -262,13 +258,9 @@
     <!-- Simulation Data -->
     <div class="dataset-column">
       <div class="column-media">
-  <video
-    src="videos/simulationdata.mp4"
-    autoplay
-    muted
-    loop
-    playsinline
-  ></video>
+  <video autoplay muted loop playsinline>
+    <source src="assets/videos/simulationdata.mp4" type="video/mp4">
+  </video>
 </div>
       <h3>Simulation Data</h3>
       <ul>
@@ -353,13 +345,9 @@
     <!-- Teleoperation Data -->
     <div class="dataset-column">
       <div class="column-media">
-  <video
-    src="videos/teleops.mp4"
-    autoplay
-    muted
-    loop
-    playsinline
-  ></video>
+  <video autoplay muted loop playsinline>
+    <source src="assets/videos/teleops.mp4" type="video/mp4">
+  </video>
 </div>
       <h3>Teleoperated Robot Data</h3>
       <ul>
