--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
     </div>
 
     <div class="status-item">
-      <span class="status-value">RGB / RGB-D</span>
-      <span class="status-label">Vision modalities</span>
+      <span class="status-value">72,000</span>
+      <span class="status-label">Real-world trajectories</span>
     </div>
 
     <div class="status-item">
-      <span class="status-value">Human / Sim / TeleOp</span>
-      <span class="status-label">Collection modes</span>
+      <span class="status-value">14,000,000</span>
+      <span class="status-label">Digital Twins Simulation Steps</span>
     </div>
   </div>
 </section>
